# h10

./: pyproject.toml
hw10/: db.json  db.sqlite3
hw10/hw10/: asgi.py  settings.py  urls.py  wsgi.py
hw10/quotes/: admin.py  forms.py  models.py  views.py
hw10/quotes/migrations/: 0001_initial.py  0002_rename_gmail_writer_email_quote_title.py  0002_writer_birthday.py  0003_remove_quote_title.py  0003_tag_quote_tag.py  0004_alter_quote_tag.py  0004_remove_writer_password.py  0005_alter_quote_tag.py  0006_alter_quote_tag.py  0007_alter_quote_tag.py
hw10/quotes/static/quote/styles/: add_quote.css  author_style.css  head_style.css  index_style.css  login_style.css
hw10/templates/: add_quote_page.html  author_page.html  index.html  index_page.html  login_page.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register_page.html
